fix(textfield): remove v-scrollbars on label

--- a/components/textfield/_spec.scss
+++ b/components/textfield/_spec.scss
@@ -365,6 +365,7 @@ $mdw-textfield__input-bottom-alignment: dp(8) !default;
   -ms-grid-row-align: start;
   align-self: flex-start;
   overflow-x: hidden;
+  overflow-y: hidden;
 
   margin: 0;
   padding: 0;
